# emu6502

./: README.md  TODO  chess.s  cmon.a65  emu6502.cabal  run_chess  run_cmon  stack.yaml  test.s  test12.s  test13.s  test14.s  test15.s
app/: Main.hs  Toy.hs
src/: Atari.hs  Binary.hs  Core.hs  Stella.hs  Step.hs  TIAColors.hs  Tick.hs  Vanilla.hs  VirtualBBC.hs  core.hs
test/: Main.hs
